src/objects/KaptioDocumentSetting__mdt/KaptioDocumentSetting__mdt.object-meta.xml
<CustomObject>
    <label>Kaptio Document Setting</label>
    <pluralLabel>Kaptio Document Settings</pluralLabel>
</CustomObject>