src/objects/KaptioDocumentSetting__mdt/fields/Color100__c.field-meta.xml
<CustomField>
    <fullName>Color100__c</fullName>
    <inlineHelpText>Default: #f3f6f6</inlineHelpText>
    <label>Color-100</label>
    <length>25</length>
    <type>Text</type>
</CustomField>