src/objects/KaptioDocumentSetting__mdt/fields/Color200__c.field-meta.xml
<CustomField>
    <fullName>Color200__c</fullName>
    <inlineHelpText>Default: #dae0e4</inlineHelpText>
    <label>Color-200</label>
    <length>25</length>
    <type>Text</type>
</CustomField>