src/objects/KaptioDocumentSetting__mdt/fields/Color300__c.field-meta.xml
<CustomField>
    <fullName>Color300__c</fullName>
    <inlineHelpText>Default: #646464</inlineHelpText>
    <label>Color-300</label>
    <length>25</length>
    <type>Text</type>
</CustomField>