src/objects/KaptioDocumentSetting__mdt/fields/ContactUs__c.field-meta.xml
<CustomField>
    <fullName>ContactUs__c</fullName>
    <description>Link to a contact page</description>
    <label>Contact Us</label>
    <type>Url</type>
</CustomField>