src/objects/KaptioDocumentSetting__mdt/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>The Stage Type Categories which this setting record applies to as a comma separated string. If left empty this record applies to all Stage Type Categories</description>
    <inlineHelpText>Please enter the Stage Type Categories which this setting record applies to as a comma separated string. Leave empty for all Stage Type Categories</inlineHelpText>
    <label>Document Type</label>
    <type>TextArea</type>
</CustomField>