src/objects/KaptioDocumentSetting__mdt/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <description>Link to an Instagram account</description>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>