src/objects/KaptioDocumentSetting__mdt/fields/LogoHeight__c.field-meta.xml
<CustomField>
    <fullName>LogoHeight__c</fullName>
    <description>Please enter the {width/height} of the {Invoice/PDF/- Logo} in pixels. Leaving this field empty will set the {width/height} to “auto”.</description>
    <inlineHelpText>Please enter the height of the Logo in pixels. Leaving this field empty will set the height to “auto”.</inlineHelpText>
    <label>Logo Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>