src/objects/KaptioDocumentSetting__mdt/fields/LogoInvoiceHeight__c.field-meta.xml
<CustomField>
    <fullName>LogoInvoiceHeight__c</fullName>
    <description>Please enter the {width/height} of the {Invoice/PDF/- Logo} in pixels. Leaving this field empty will set the {width/height} to “auto”.</description>
    <inlineHelpText>Please enter the height of the Invoice Logo in pixels. Leaving this field empty will set theheight to “auto”.</inlineHelpText>
    <label>Logo Invoice Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>