src/objects/KaptioDocumentSetting__mdt/fields/LogoInvoiceURL__c.field-meta.xml
<CustomField>
    <fullName>LogoInvoiceURL__c</fullName>
    <label>Logo Invoice URL</label>
    <type>Url</type>
</CustomField>