src/objects/KaptioDocumentSetting__mdt/fields/LogoPDFURL__c.field-meta.xml
<CustomField>
    <fullName>LogoPDFURL__c</fullName>
    <description>A link to a logo meant for PDF display. The domain within which the logo is stored must be whitelisted under the Remote Sites in this org</description>
    <label>Logo PDF URL</label>
    <type>Url</type>
</CustomField>