src/objects/KaptioDocumentSetting__mdt/fields/LogoPDFWidth__c.field-meta.xml
<CustomField>
    <fullName>LogoPDFWidth__c</fullName>
    <description>Please enter the {width/height} of the {Invoice/PDF/- Logo} in pixels. Leaving this field empty will set the {width/height} to “auto”.</description>
    <inlineHelpText>Please enter the width of the PDF Logo in pixels. Leaving this field empty will set the width to “auto”.</inlineHelpText>
    <label>Logo PDF Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>