src/objects/KaptioDocumentSetting__mdt/fields/LogoURL__c.field-meta.xml
<CustomField>
    <fullName>LogoURL__c</fullName>
    <description>A link to a logo. The domain within which the logo is stored must be whitelisted under the Remote Sites in this org</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>