src/objects/KaptioDocumentSetting__mdt/fields/LogoWidth__c.field-meta.xml
<CustomField>
    <fullName>LogoWidth__c</fullName>
    <description>Please enter the {width/height} of the {Invoice/PDF/- Logo} in pixels. Leaving this field empty will set the {width/height} to “auto”.</description>
    <inlineHelpText>Please enter the width of the Logo in pixels. Leaving this field empty will set the width to “auto”.</inlineHelpText>
    <label>Logo Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>