src/objects/KaptioDocumentSetting__mdt/fields/NavigationType__c.field-meta.xml
<CustomField>
    <fullName>NavigationType__c</fullName>
    <description>Defines whether the main navigation of documents is a horizontal menu or vertical in the sidebar.</description>
    <label>Navigation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
                <default>true</default>
                <label>Horizontal</label>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>