src/objects/KaptioDocumentSetting__mdt/fields/PrivacyPolicy__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicy__c</fullName>
    <description>Link to a Privacy Policy page</description>
    <label>Privacy Policy</label>
    <type>Url</type>
</CustomField>