src/objects/KaptioDocumentSetting__mdt/fields/TermsOfUse__c.field-meta.xml
<CustomField>
    <fullName>TermsOfUse__c</fullName>
    <description>Link to a Terms of Use page</description>
    <label>Terms Of Use</label>
    <type>Url</type>
</CustomField>