src/objects/KaptioDocumentSetting__mdt/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>Link to a Twitter account</description>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>