src/objects/KaptioDocumentSetting__mdt/fields/WebsiteFeedback__c.field-meta.xml
<CustomField>
    <fullName>WebsiteFeedback__c</fullName>
    <description>Link to a Website Feedback page</description>
    <label>Website Feedback</label>
    <type>Url</type>
</CustomField>